@@ -25,8 +25,6 @@
 #include "db.h"
 #include "comms.h"
 
-extern	int	CONFIG_NODEID;
-
 int	send_list_of_active_checks(zbx_sock_t *sock, const char *host);
 
 #endif
